syntax = "proto3";

package direktiv_flow;

option go_package = "github.com/vorteil/direktiv/pkg/flow/grpc";

import "google/protobuf/timestamp.proto";

import "pkg/flow/grpc/pagination.proto";

message Secret {
	string name = 1;
}

message SecretEdge {
	Secret node = 1;
	string cursor = 2;
}

message Secrets {
	int32 totalCount = 1;
	PageInfo pageInfo = 2;
	repeated SecretEdge edges = 3;
}

message SecretsRequest {
	Pagination pagination = 1;
	string namespace = 2;
}

message SecretsResponse {
	string namespace = 1;
	Secrets secrets = 2;
}

message SetSecretRequest {
	string namespace = 1;
	string key = 2;
	bytes data = 3;
}

message SetSecretResponse {
	string namespace = 1;
	string key = 2;
	google.protobuf.Timestamp created_at = 3;
	google.protobuf.Timestamp updated_at = 4;
	string checksum = 5;
	int64 totalSize = 6;
}

message DeleteSecretRequest {
	string namespace = 1;
	string key = 2;
}
